# linkstat

./: .gitignore  CHANGELOG.md  README.md  changelog.mmd  linkonlyfolders  linkstat  listonce
liblinkstat/: __init__.py  linkstat.py
src/: linkstat  pyproject.toml  setup.py
src/liblinkstat/: __init__.py  stat.py
src/linkstat/: __init__.py  linkonlyfolders  linkonlyfolders.py  linkstat.py  listonce  listonce.py  stat.py
