[tool.poetry]
name = "linkstat"
version = "1.3.0"
description = "Scipts to work with hard linked folder copies"
authors = ["François Trahan <francois.trahan@gmail.com>"]
license = "GPL-3.0"

homepage = "https://github.com/francoistrahan/linkstat"

[tool.poetry.scripts]
linkstat = "linkstat.linkstat:main"
listonce = "linkstat.listonce:main"
linkonlyfolders = "linkstat.linkonlyfolders:main"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
